--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@ src/bin/
 src/obj/
 
 # Ignore PowerShell build scripts
-# build_and_deploy_main.bat
-# build_and_deploy_main.ps1
-# build_and_deploy_dev.bat
-# build_and_deploy_dev.ps1
+build_and_deploy_main.bat
+build_and_deploy_main.ps1
+build_and_deploy_dev.bat
+build_and_deploy_dev.ps1
 
 # Ignore Linux build scripts
-# build_and_deploy_dev.sh
-# build_and_deploy_main.sh
+build_and_deploy_dev.sh
+build_and_deploy_main.sh
